
[[v2.1.0]]
v2.1.0 (unreleased)
-------------------

Added
~~~~~

- New `:screenshot` command which can be used to screenshot the visible part of
  the page.
- New optional dependency on the `importlib_metadata` project on Python 3.7 and
  below. This is only relevant when PyQtWebEngine is installed via pip - thus,
  this dependency usually isn't relevant for packagers.

Changed
~~~~~~~

- Initial support for Qt 5.15.3
- The `colors.webpage.prefers_color_scheme_dark` setting got renamed to
  `colors.webpage.preferred_color_scheme` and now takes the values `auto`, `light`
  and `dark` (instead of being `True` for dark and `False` for auto).
  Note that the `light` value is only supported with Qt 5.15.2+, falling back to
  the same behavior as `auto` on older versions.
- On Linux, qutebrowser now tries harder to find details about the installed
  QtWebEngine version by inspecting the QtWebEngine binary. This should reduce
  issues with dark mode (and some workarounds) not working when using differing
  versions of QtWebEngine/PyQtWebEngine/Qt.
  This change also prepares qutebrowser for QtWebEngine 5.15.3, which will get
  released without an updated Qt.

Fixed
~~~~~

- The `colors.webpage.preferred_color_scheme` and `colors.webpage.darkmode.*`
  settings now work correctly with the upcoming QtWebEngine 5.15.3 (and Gentoo,
  which at the time of writing packages 5.15.3 disguised as 5.15.2).
- When dark mode settings were set, existing `blink-features` arguments in
  `qt.args` (or `--qt-flag`) were overridden. They are now combined properly.
- On QtWebEngine 5.15.2, auto detection for the `prefers-color-scheme` media
  query is broken and always returns `no-preference`, which was removed from the
  CSS WG Specification. This release contains a workaround to always return
  `light` instead (as per the spec).
- When an external file selector deletes the temporary file (like `nnn` does
  when quitting the terminal), qutebrowser would crash. It now displays an